# deepwiki-open

./: .gitignore  pyproject.toml
repositories/vestas/neuron-ml/: .dockerignore  .gitignore  .pre-commit-config.yaml  databricks.yml  justfile  pyproject.toml  requirements_dbx_wheel.txt
repositories/vestas/neuron-ml/.azuredevops/: pull_request_template.md
repositories/vestas/neuron-ml/azure-pipelines/: ci.yml  deploy-dbx-jobs.yml  deploy-predict-api.yml  deploy-train-api.yml
repositories/vestas/neuron-ml/azure-pipelines/templates/: job-approval-gate.yml  job-deploy-dbx-bundle.yml  job-deploy-predict-api.yml  job-deploy-train-api.yml  step-install-k8s-deployment-tools.yml  step-install-python-project.yml  step-model-release.yml
repositories/vestas/neuron-ml/dbx_resources/: experiment.yml  training_pipeline_job.yml
repositories/vestas/neuron-ml/k8s/predict/base/: deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml  servicemonitor.yaml
repositories/vestas/neuron-ml/k8s/predict/dev/: kustomization.yaml
repositories/vestas/neuron-ml/scripts/: convert_csv_to_parquet.py  create_config_from_hydra.py  dbx_eval_cli.py  dbx_train_cli.py  generate_fixed_predictions_for_model_testing.py  purge_acr_task.sh  release-process.py  test_deployed_api.py
repositories/vestas/neuron-ml/scripts/data_analysis_app/: Neuron_Data_Analysis.py
repositories/vestas/neuron-ml/scripts/load_test/: locustfile.py
repositories/vestas/neuron-ml/scripts/model_opt/: model-opt.py
repositories/vestas/neuron-ml/scripts/pred_api/: pred_fast_api.py
repositories/vestas/neuron-ml/scripts/rerun_training/: rerun-training.py
repositories/vestas/neuron-ml/src/neuron/: __init__.py  api_utils.py  config.py  evaluate_load_case_model.py  load_case_model_training_pipeline.py  logs.py  turbine_eval_run.py  turbine_train_run.py  turbine_training_pipeline.py  utils.py
repositories/vestas/neuron-ml/src/neuron_prediction_service/: Dockerfile  __init__.py  config.py  exception_handling.py  main.py  model_cache.py  schemas.py
repositories/vestas/neuron-ml/src/neuron_training_service/: Dockerfile  config.py  schemas.py  simmesh_storage.py  training_service.py  user_config_parsing.py
repositories/vestas/neuron-ml/tests/: conftest.py  test_doubles.py
repositories/vestas/neuron-ml/tests/prediction_service/: test_prediction_api.py
repositories/vestas/neuron-ml/tests/training_service/: test_api_logging.py  test_api_user_config_parsing.py  test_cli_user_config_parsing.py  test_simmesh_storage.py  test_training_api.py  test_training_service.py
repositories/vestas/neuron-ml/training_run_config/: config.yaml
repositories/vestas/neuron-ml/training_run_config/evaluation/: default.yaml
repositories/vestas/neuron-ml/training_run_config/load_case_training_runs/: dev_load_case.yaml  full_site_load_cases.yaml  full_site_load_cases_perf_steps.yaml  v163_v1.0_data.yaml
repositories/vestas/neuron-ml/training_run_config/turbine/: default.yaml  v150_4500_mk3f.yaml  v162_5600_mk0a.yaml  v163_4500_mk4a.yaml
repositories/vestas/neuron-ml/turbine_variant_build_configs/dev/: 150_4500_mk3f_2.yaml  162_5600_mk0a_2.yaml
repositories/vestas/neuron-ml/turbine_variant_build_configs/prod/: 150_4500_mk3f_2.yaml  162_5600_mk0a_2.yaml
(+171 files in other folders)
